# KuzFileCryptor

./: CMakeLists.txt  README.md  file_encryptor.c
docs/: Doxyfile.in
